--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+* {
+  font-family: "Arial", serif;
+}
 .App {
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+body {
+  background-color: rgba(255, 255, 255, 0.8);
 }
