--- a/src/components/Contacts/styles.css
+++ b/src/components/Contacts/styles.css
@@ -48,6 +48,7 @@ li {
   background-color: #73020c;
   font-size: 16px;
   border-radius: 5px;
+  border-style: none;
   padding: 5px;
   width: 60px;
 }
